--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>wellcom</title>
+        <title>my wellcom</title>
     </head>
     <body>
-        <h1>wellcom</h1>
-        <h2>wellcom</h2>
-        <h3>wellcom</h3>
+        <h1>well</h1>
+        <h2>well</h2>
+        <h3>well</h3>
     </body>
 </html>
